# rkvst-receipt-scitt

./: .gitignore  Dockerfile-builder  LICENSE  README.md  README.rst  Taskfile.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: cicd.yaml
docs/: conf.py  index.rst  package.rst  sbom.xml
rkvst_receipt_scitt/: attribute_decoder.py  exceptions.py  receiptdecoder.py  v1.py  verify_proof.py
scripts/: build.sh  builder.sh  unittests.sh  venv.sh
unittests/: test_attribute_decoder.py  test_decode_receipt.py  wellknown.py
unittests/data/: khipu_receipt_happy_default.b64
