[pycodestyle]
ignore = E128, E203, E225, E265, E266, E402, E501, E713, E722, E741, W503, W504, 
statistics = True
max-line-length = 88

[metadata]
name = rkvst-receipt-scitt
author = RKVST Inc.
author_email = support@rkvst.com
description = RKVST Scitt Receipt Verification in python
license = MIT
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/rkvst/rkvst-receipt-scitt

classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: Utilities

project_urls =
    Source = https://github.com/rkvst/rkvst-receipt-scitt
    Tracker = https://github.com/rkvst/rkvst-receipt-scitt/issues

[options]
install_requires = file: requirements.txt
packages = rkvst_receipt_scitt
platforms = any
python_requires = >=3.7
setup_requires = setuptools-git-versioning

[options.entry_points]
console_scripts =
    rkvst_receipt_scittv1 = rkvst_receipt_scitt.v1:main

[bdist_wheel]
universal = 1
